# LLMengine_study

./: CMakeLists.txt  README.md
src/kernels/: CMakeLists.txt  attn_softmax_kernel.cu  attn_softmax_kernel.h  build_causal_mask.cu  cal_paddingoffset.cu  cal_paddingoffset.h  concat_past_kv.cu  concat_past_kv.h  cublas.cc  cublas_utils.cc  cublas_utils.h  fused_addresidual_norm.cu  fused_decoder_self_attention.cu  fused_decoder_self_attention.h  fused_transpose_and_remv_pad.cu  fused_transpose_and_remv_pad.h  input_embedding.cu  input_embedding.h  linear.cu  linear.h  qkv_biad_and_RoRE.cu  rmsnorm_kernel.cu  rmsnorm_kernel.h  sampling.cu  topK.cu  topK.h
src/layers/: CMakeLists.txt
src/layers/attention/: CMakelists.txt  context_attention.cpp  context_attention.h  masked_self_attention.cpp  masked_self_attention.h
src/memory/allocator/: base_allocator.h  cuda_allocator.h
src/utils/: cuda_debug_utils.cuh  macro.h  string_utils.h  tensor.h  vectorize_utils.h
src/weights/: base_weights.h
src/weights/llama/: embedding_weights.h  norm_weights.h
tests/unittests/: CMakeLists.txt  test_bias_and_RoPE.cu  test_cal_paddingoffset.cu  test_causal_mask.cu  test_concat_kv.cu  test_fused_addresidual_norm.cu  test_fused_decoder_attention.cu  test_input_embedding.cu  test_linear.cu  test_mask_softmax.cu  test_rmsnorm.cu  test_sampling.cu  test_topk.cu
